--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="Author" content="">
   <meta name="Keywords" content="">
   <meta name="Description" content="">
-  <title>Document</title>
+  <title>吾爱小力王</title>
   <link rel="stylesheet" href="css.css">
  </head>
  <body>
